--- a/style/layout.css
+++ b/style/layout.css
@@ -31,9 +31,15 @@ a:active {
   background-repeat: repeat-y;
 }
 
-#nav{
-  text-align:center;
+#nav {
+  text-align: center;
   padding-top: 165px;
+}
+
+#nav p {
+  margin: 15px 0;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 #head {
