--- a/style/layout.css
+++ b/style/layout.css
@@ -12,6 +12,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 #all a:hover {
   color: #fff;
   text-decoration: none;
