--- a/style/all.css
+++ b/style/all.css
@@ -7,7 +7,9 @@ table#bingotable td {
   width: 20%;
   height: 20%;
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
   border-color: black;
   text-align: center;
+  font-weight: bold;
+  padding: 5px;
 }
